--- a/NLP_Seq2Seq_&_Attention.ipynb
+++ b/NLP_Seq2Seq_&_Attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfQZXuTa53Vz5vstzntvUT",
+      "authorship_tag": "ABX9TyOs8mxHOz5MiuWJJyeVTbGo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,7 +146,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 231
+          "height": 178
         },
         "id": "pvNqPzpXMGxY",
         "outputId": "f2dcb692-fc3f-4107-b787-2d67f7e979c0"
@@ -687,7 +687,7 @@
         "  return result\n",
         "  \n",
         "for inp, tar in dataset.take(N_BATCH):\n",
-        "  print(translate(inp[5:6,:]))\n",
+        "  print(translate(inp[10:11,:]))\n",
         "  break"
       ],
       "metadata": {
@@ -695,17 +695,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0L-qY9jIAbV0",
-        "outputId": "8fb6ad4a-e823-40eb-d8a0-a39130d96a34"
+        "outputId": "18432dc9-8191-4ac9-8953-a854f3dbf729"
       },
-      "execution_count": 45,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<start> but this has come as a great boon for them  <end>\n",
+            "<start> the technology for oxygen delivery is not new  <end> <pad> <pad>\n",
             "(1, 13, 1024) (1, 1024)\n",
-            "nhưng điều này là một món quà tuyệt nhất cho chúng  <end> \n"
+            "công nghệ chuyển đổi khí oxi không còn mới <end> <end> <end> <end> \n"
           ]
         }
       ]
